# weather-air-quality-analysis

./: .env.example  .gitignore  README.md  assignment4_analysis_plan.md  assignment4_reflection.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/bronze/nager_holidays/: canada_holidays_2024_2026-04-07T19-26-58.json  canada_holidays_2025_2026-04-07T19-26-58.json
data/bronze/open_meteo_air_quality/: toronto_air_quality_2026-03-31T12-46-52.json  toronto_air_quality_2026-03-31T22-09-54.json  vancouver_air_quality_2026-03-31T12-46-52.json  vancouver_air_quality_2026-03-31T22-09-54.json
data/bronze/open_meteo_weather/: toronto_weather_2026-03-31T12-46-52.json  toronto_weather_2026-03-31T22-09-54.json  vancouver_weather_2026-03-31T12-46-52.json  vancouver_weather_2026-03-31T22-09-54.json
data/gold/: weather_air_quality_daily.csv
data/silver/: holidays_clean.csv
ingest/: fetch_holidays.py
transform/: build_gold.py  build_silver.py
